JumpScript/tests/baselines/reference/externSemantics.errors.txt
tests/cases/compiler/externSemantics.jump(1,14): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/compiler/externSemantics.jump(3,21): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/compiler/externSemantics.jump (2 errors) ====
    declare var x=10;
                 ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    declare var v;
    declare var y:number=3;
                        ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    